Primary text color change. Aligned title on help, settings. Seal loads correctly

--- a/client/src/pages/help/help.scss
+++ b/client/src/pages/help/help.scss
@@ -1,3 +1,10 @@
 page-help {
-
+	.title.title-md {
+	    position: absolute;
+	    left: 0;
+	    top: 0;
+	    height: 100%;
+	    width: 100%;
+	    text-align: center;
+	}
 }
