--- a/client/src/theme/variables.scss
+++ b/client/src/theme/variables.scss
@@ -31,7 +31,7 @@ $background-color: #F8F8F8;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary: white,
+  primary: #252A26,
   secondary: #32db64,
   danger: #f53d3d,
   light: #f4f4f4,
